[gd_scene load_steps=2 format=3 uid="uid://by0mbl4b8v5m6"]

[ext_resource type="Script" uid="uid://wxlnknu0iy13" path="res://scripts/MainMenu.gd" id="1_yqorp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqorp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="Title" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "MAIN MENU"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="Play" type="Button" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CreateWorld" type="Button" parent="VBoxContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Create World"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="JoinWorld" type="Button" parent="VBoxContainer2/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Join World"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="back" type="Button" parent="VBoxContainer2/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Back to Main Menu"

[connection signal="pressed" from="VBoxContainer/MarginContainer2/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer3/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer2/MarginContainer/back" to="." method="_on_back_pressed"]
